code review ,add parentNode data info for the result tree